Finished song insert,update,delete pages

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     <h2> Links </h2>
     <ul>
       <li><a href="uploadSong.html"> Upload Song </a></li>
-      <li><a href="songs.php"> View all Songs </a></li>
+      <li><a href="updateSong.php"> Update A Song </a></li>
       <li><a href="deleteSong.php"> Delete Song </a></li>
-      <!-- <li><a href="createArtist.php"> Create an Artist </a></li>
-      <li><a href="uploadAlbum.html"> Upload an Album </a></li>
-      <li><a href="albums.php"> View all Albums </a></li> -->
+      <li><a href="songs.php"> View all Songs </a></li>
     </ul>
   </body>
 </html>
