--- a/uploadSong.html
+++ b/uploadSong.html
@@ -8,8 +8,8 @@
   <body>
     <h1> Upload a Song </h1>
     <form class="song" action="uploadSong.php" method="post">
-      Title: <input type="text" name="name" size="30"><br><br>
-      Length: <input type="text" name="length" size="30"><br><br>
+      Title: <input type="text" name="name" size="30" required><br><br>
+      Length: <input type="text" name="length" size="30" required><br><br>
       <input type="submit" name="submit" value="Upload">
     </form>
   </body>
