Added Library View

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2> Links </h2>
     <ul>
       <li><a href="createAlbum.html">Create an Album</a></li>
+      <li><a href="library.php">View the Song Library</a></li>
       <!-- <li><a href="uploadSong.html"> Upload Song </a></li>
       <li><a href="updateSong.php"> Update A Song </a></li>
       <li><a href="deleteSong.php"> Delete Song </a></li>
