--- a/signupArtist.html
+++ b/signupArtist.html
@@ -8,6 +8,8 @@
   <body>
     <h1> Sign Up as an Artist </h1>
     <form action="signupArtist.php" method="post">
+      Email: <input type="text" name="email" size="30" required><br><br>
+      Password: <input type="password" name="password" size="30" required><br><br>
       Name: <input type="text" name="name" size="30" required><br><br>
       Bio: <textarea name="bio" id="bio" cols="30" rows="10"></textarea><br><br>
       Profile Picture: <input type="file" name="profilePic"><br><br>
