--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <li><a href="library.php">View the Song Library</a></li>
       <li><a href="createAlbum.html">Create an Album</a></li>
       <li><a href="signupArtist.html">Create an Artist Account</a></li>
+      <li><a href="myAccount.php">My Account</a></li>
+      <li><a href="login.html">Artist Login</a></li>
       <!-- <li><a href="uploadSong.html"> Upload Song </a></li>
       <li><a href="updateSong.php"> Update A Song </a></li>
       <li><a href="deleteSong.php"> Delete Song </a></li>
