--- a/auth/artistLogin.html
+++ b/auth/artistLogin.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Login</title>
+		<title>Artist Login</title>
 	</head>
 	<body>
-		<h1>Login</h1>
-		<form action="login.php" method="post">
-			<input type="text" name="name" placeholder="Artist Name" id="name" required>
+		<h1>Artist Login</h1>
+		<form action="artistLogin.php" method="post">
+			<input type="text" name="email" placeholder="Artist Email" id="email" required>
 			<input type="password" name="password" placeholder="Password" id="password" required>
 			<input type="submit" value="Login">
 		</form>
