--- a/auth/signupArtist.html
+++ b/auth/signupArtist.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title> Sign Up As An Artist </title>
-    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1> Sign Up as an Artist </h1>
     <form action="signupArtist.php" method="post">
       Email: <input type="text" name="email" size="30" required><br><br>
       Password: <input type="password" name="password" size="30" required><br><br>
-      Name: <input type="text" name="name" size="30" required><br><br>
+      Artist Name: <input type="text" name="username" size="30" required><br><br>
       Bio: <textarea name="bio" id="bio" cols="30" rows="10"></textarea><br><br>
       Profile Picture: <input type="file" name="profilePic"><br><br>
       <input type="submit" name="submit" value="Sign Up">
