--- a/auth/signupUser.html
+++ b/auth/signupUser.html
@@ -6,9 +6,9 @@
   <body>
     <h1> Sign Up as a User </h1>
     <form action="signupUser.php" method="post">
+      Userame: <input type="text" name="username" size="30" required><br><br>
       Email: <input type="text" name="email" size="30" required><br><br>
       Password: <input type="password" name="password" size="30" required><br><br>
-      Userame: <input type="text" name="name" size="30" required><br><br>
       Profile Picture: <input type="file" name="profilePic"><br><br>
       <input type="submit" name="submit" value="Sign Up">
     </form>
